<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dreamteam.pvviter.activities.MapActivity">
    <item
        android:id="@+id/action_change_time"
        android:orderInCategory="100"
        android:title="@string/action_change_time"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_credit"
        android:orderInCategory="100"
        android:title="@string/action_credit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
