<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.dreamteam.pvviter.activities.MapActivity">
    <org.osmdroid.views.MapView android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        >

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="#ffffffff" >
            <TextView
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="#ffffffff"
                android:layout_marginRight="1dip"
                android:gravity="center"
                android:text="@string/time_car_label"/>
            <TextView
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="#ffffffff"
                android:layout_marginLeft="1dip"
                android:layout_marginRight="1dip"
                android:gravity="center"
                android:text="@string/distance_route_label"/>
            <TextView
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="#ffffffff"
                android:layout_marginLeft="1dip"
                android:gravity="center"
                android:text="@string/time_route_label"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="#ffffffff" >
            <TextView
                android:id="@+id/time_car"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="#ffffffff"
                android:layout_marginRight="1dip"
                android:gravity="center"/>
            <TextView
                android:id="@+id/distance_route"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="#ffffffff"
                android:layout_marginLeft="1dip"
                android:layout_marginRight="1dip"
                android:gravity="center"/>
            <TextView
                android:id="@+id/time_route"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="#ffffffff"
                android:layout_marginLeft="1dip"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>


    <!--<TextView
        android:id="@+id/infosMap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="#ffffffff"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />-->
</RelativeLayout>