<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.TimeStampActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_weight="3"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/white"
                android:text="Choissez une durée d'hororateur"
                android:background="@drawable/back"
                android:gravity="center"
                android:textSize="30sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="2">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                >

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/number_picker_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:np_width="64dp"
                    app:np_height="180dp"
                    app:np_dividerColor="@color/white"
                    app:np_max="23"
                    app:np_min="0"
                    app:np_textColor="@color/white"
                    app:np_textSize="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeDelimiter"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/number_picker_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:np_width="64dp"
                    app:np_height="180dp"
                    app:np_dividerColor="@color/white"
                    app:np_max="59"
                    app:np_min="0"
                    app:np_textColor="@color/white"
                    app:np_textSize="30dp" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="openTimePickerDialog"
                >


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/time_stamp_end_layout">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.2dp"
                        android:visibility="visible"
                        android:background="@color/white"/>

                    <TextView
                        android:id="@+id/time_stamp_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/time_stamp_end"
                        android:textSize="20sp"
                        />
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.2dp"
                        android:visibility="visible"
                        android:background="@color/white"/>
                </LinearLayout>

                <ImageButton
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/edit_icon"
                    android:layout_toRightOf="@id/time_stamp_end_layout"
                    android:onClick="openTimePickerDialog"/>


            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            android:layout_weight="3"
            >

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:background="@null"
                android:scaleType="centerCrop"
                android:onClick="takeAPicture"
                android:src="@drawable/camera_icon"/>

            <Button
                android:id="@+id/validate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/validate_button"
                android:background="@drawable/roundedbutton"
                android:onClick="openMapActivity"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
